# docxml

./: Cargo.toml  LICENSE-MIT  README.md
benches/: README.md  bench_python_docx.py
docs/: DESIGN.md
examples/: bench.rs
src/: error.rs  lib.rs
src/api/: document.rs  field.rs  header.rs  mod.rs  numbering.rs  paragraph.rs  picture.rs  run.rs  section.rs  settings.rs  style.rs  table.rs  units.rs
src/api/templates/: blank.docx
src/opc/: mod.rs  rels.rs
src/xml/: mod.rs
tests/: document_api.rs  formatting.rs  header_creation.rs  hyperlinks.rs  line_numbering_frames.rs  numbering.rs  para_format.rs  pictures.rs  roundtrip.rs  sections.rs  styles.rs  table_widths_merge.rs  tables.rs  xml_semantic_roundtrip.rs
tests/fixtures/: basic.docx  hyperlinks_images.docx  styles_toc.docx  tables_merged.docx
tests/fixtures/generators/: hyperlinks_images.py  styles_toc.py  tables_merged.py
